test/diagnostics/bad-generated-filenames.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t/SlashA.codemodule %S/Inputs/slash.code
// RUN: %target-language-frontend -emit-module -o %t/SlashB.codemodule %S/Inputs/slash.code
// RUN: not %target-language-frontend -typecheck -I %t -serialize-diagnostics-path %t/serialized.dia %s
// RUN: c-index-test -read-diagnostics %t/serialized.dia > %t/serialized.txt 2>&1
// RUN: %FileCheck %s -check-prefix CHECK-DIA < %t/serialized.txt

import SlashA
import SlashB

fn test(a: String, b: Int) -> Bool {
  // CHECK-DIA: [[@LINE+3]]:5: error: ambiguous use of operator '/'
  // CHECK-DIA: SlashA./_operator
  // CHECK-DIA: SlashB./_operator
  a / b
}
